Implement CartControllerTest @WebMvcTest unit tests for CartController REST endpoints
- Complete rewrite of CartControllerTest with all 11 required test methods
- Test all 5 REST endpoints: GET cart, POST add item, DELETE remove item,
  PUT update quantities, DELETE clear cart
- Validate Jakarta Bean Validation (@NotBlank) on AddItemRequest for
  null, blank, and whitespace itemId values (400 Bad Request)
- Verify ResourceNotFoundException handling for non-existent items (404)
- Verify cart clearing returns 204 No Content
- Uses @WebMvcTest slice with @MockitoBean for CartStateService isolation
- Uses @Import(SecurityConfig.class) for CSRF-disabled stateless config
- All BigDecimal monetary values match monolith reference data
- Maps monolith CartActionBeanTest patterns to microservice REST patterns
- 118/118 order-service module tests pass with zero failures